[gd_scene load_steps=13 format=3 uid="uid://c475epjrtcusw"]

[ext_resource type="Script" path="res://resultado.gd" id="1_hc02v"]
[ext_resource type="Texture2D" uid="uid://b4rsvu3rt2hv1" path="res://Recursos/Fondos/06869317-8b23-46b8-b45b-5b3f034e277a.png" id="2_gg7gs"]
[ext_resource type="FontFile" uid="uid://b5004m857mone" path="res://Recursos/fuentes/Kenney Pixel Square.ttf" id="3_m817a"]
[ext_resource type="Texture2D" uid="uid://b32cjjwd4w0hh" path="res://Recursos/Botones/star.png" id="3_tgtws"]
[ext_resource type="Texture2D" uid="uid://ctua08krldxx5" path="res://Recursos/Botones/botonopciones.png" id="4_jh5hh"]
[ext_resource type="FontFile" uid="uid://h0lcg2ndmnti" path="res://Recursos/fuentes/Kenney Blocks.ttf" id="5_6a45o"]
[ext_resource type="Texture2D" uid="uid://blb7wh6aw5cmi" path="res://Recursos/sprites/9432df3a-1675-4824-9fa8-78f755dcd038.png" id="7_rhfq1"]
[ext_resource type="AudioStream" uid="uid://duc3ullmd8rot" path="res://Recursos/audio/Crash Bandicoot 1 - Tawna Bonus Round Music.mp3" id="8_qtxl0"]

[sub_resource type="LabelSettings" id="LabelSettings_unnru"]
font = ExtResource("3_m817a")
font_size = 29
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_c5sjv"]
resource_name = "PC"
length = 15.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 1, 1.76293, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 3, 0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3, 4, 5, 6, 7.04278, 9, 10, 10.8995, 11.8995, 12.9677, 13.9677),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 0.826172), Vector2(1, 1), Vector2(1, 0.826172), Vector2(1, 1), Vector2(1, 1), Vector2(1, 0.826172), Vector2(1, 1), Vector2(1, 0.826172), Vector2(1, 1), Vector2(1, 0.826172)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3, 4, 5, 6, 7.04278, 9, 10, 10.8995, 11.8995, 12.9677, 13.9677),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(372, 600), Vector2(372, 600), Vector2(372, 624.5), Vector2(372, 580), Vector2(372, 624.5), Vector2(372, 580), Vector2(372, 580), Vector2(372, 624.5), Vector2(372, 580), Vector2(372, 624.5), Vector2(372, 580), Vector2(372, 624.5)]
}

[sub_resource type="Animation" id="Animation_3ailk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(372, 580)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.822266)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gqadw"]
_data = {
"PC": SubResource("Animation_c5sjv"),
"RESET": SubResource("Animation_3ailk")
}

[node name="Resultado" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hc02v")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 1.0
offset_right = 303.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.703999, 0.83222)
texture = ExtResource("2_gg7gs")

[node name="LabelTitulo" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="LabelPuntaje" type="Label" parent="."]
layout_mode = 0
offset_right = 261.0
offset_bottom = 100.0
label_settings = SubResource("LabelSettings_unnru")
vertical_alignment = 1

[node name="ContenedorEstrellas" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 175.0
offset_right = 619.0
offset_bottom = 341.0
theme_override_constants/separation = 30

[node name="TextureRect" type="TextureRect" parent="ContenedorEstrellas"]
layout_mode = 2
texture = ExtResource("3_tgtws")

[node name="TextureRect2" type="TextureRect" parent="ContenedorEstrellas"]
layout_mode = 2
texture = ExtResource("3_tgtws")

[node name="TextureRect3" type="TextureRect" parent="ContenedorEstrellas"]
layout_mode = 2
texture = ExtResource("3_tgtws")

[node name="BotonTabla" type="Button" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 1104.0
offset_right = 333.0
offset_bottom = 1230.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_6a45o")
theme_override_font_sizes/font_size = 40
text = "RANKING"
icon = ExtResource("4_jh5hh")
icon_alignment = 1

[node name="BotonMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 385.0
offset_top = 1104.0
offset_right = 662.0
offset_bottom = 1230.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_6a45o")
theme_override_font_sizes/font_size = 40
text = "MENU"
icon = ExtResource("4_jh5hh")
icon_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(372, 580)
scale = Vector2(1, 0.822266)
texture = ExtResource("7_rhfq1")
hframes = 3
vframes = 2
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_gqadw")
}
autoplay = "PC"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_qtxl0")
autoplay = true
